# whisper

./: .gitmodules  CMakeLists.txt  README.md  build.android  links
src/: CMakeLists.txt  client.cpp  client.hpp  connection_manager.cpp  connection_manager.hpp  identity_checker.cpp  identity_checker.hpp  iuser_manager.hpp  main.cpp  main_window.cpp  main_window.hpp  server.cpp  server.hpp  ssl_server.cpp  ssl_server.hpp  user_keys_manager.cpp  user_keys_manager.hpp  user_list_widget.cpp  user_list_widget.hpp  user_manager.cpp  user_manager.hpp  utils.hpp
src/encryption/: connection_monitor.cpp  connection_monitor.hpp  encrypted_client.cpp  encrypted_client.hpp  encrypted_connection.cpp  encrypted_connection.hpp  encrypted_server.cpp  encrypted_server.hpp  iconnection_manager.hpp  identity.cpp  identity.hpp  iencrypted_connection.hpp  iencryption_primitives_provider.hpp  iidentity_checker.hpp  ikeys_provider.hpp  utils.hpp
